<resources>
    <string name="app_name">proyectSad</string>
    <string name="btn_sign_in">Iniciar Sesión</string>
    <string name="btn_sign_up">Regístrate</string>
    <string name="tittle">Tittle</string>
    <string name="description">Description</string>
    <string name="intro_primera">titulo 1</string>
    <string name="intro_segunda">titulo2</string>
    <string name="intro_tercera">titulo3</string>
    <string name="intro_desc_primera">descripcion 1</string>
    <string name="intro_desc_segunda">descripcion 2</string>
    <string name="intro_desc_tercera">descripcion 3</string>
    <string name="tittle_sign_up">Regístrate</string>
    <string name="et_username">Nombre completo</string>
    <string name="et_email">Correo</string>
    <string name="et_password">Contraseña</string>
    <string name="lbl_register_with">Regístrate con</string>
    <string name="lbl_or_sptor">o</string>
    <string name="iniciar_ses_on">Iniciar sesíon</string>
    <string name="correo">Correo</string>
    <string name="regresar">Regresar</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="other_sesion">Inicia sesión con</string>
    <string name="contrase_a">Contraseña</string>
    <string name="description_fb">desciptionFB</string>
    <string name="description_google">description_google</string>
    <string name="lbl_register_sign_in_qst">¿Ya tienes una cuenta?</string>
    <string name="lbl_register_sign_in">Inicia sesión</string>
    <string name="no_tienes_u">¿No tienes una cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="color_white">#FFFFFF</string>
    <string name="color_black">#000000</string>
    <string name="lbl_version_project">ProyectoS v1.0</string>
    <string name="desc_recovery_pass">¡No se preocupe! Simplemente complete su correo electrónico y le enviaremos un enlace para restablecer su contraseña</string>
    <string name="correo_electr_ncio">Correo electróncio</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="ingrese_usuario">Ingrese el usuario</string>
    <string name="ingrese_clave">Ingrese la contraseña</string>
    <string name="ingrese_nuevo_nombre">Ingrese un nombre completo</string>
    <string name="ingrese_nuevo_email">Ingrese un email</string>
    <string name="ingrese_nuevo_clave">Ingrese una contraseña</string>
    <string name="sin_conexion">Sin conexión a internet</string>
    <string name="error_service">Ocurrió un error en servicio</string>
    <string name="error_general">Ocurrió un error </string>
</resources>